# actuarypoc

./: .gitignore  ARCH.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: actuarial-rule.md  bug.md  feature.md  filing-ingestion-enhancement.md  product-idea.md
.github/workflows/: build-and-push.yml
dagster/: README.md  repository.py
docs/: actuarial_tables_schema.md  actuarial_tables_term23_schema.md  architecture.md  audit-model.md  crm_accounts_schema.md  definition-of-done.md  dev-setup.md  domain-model.md  p12trf-backlog.md  pas_export_schema.md  rate_curves_schema.md
docs/knowledge/: actuarial-concepts.md  insurance-glossary.md  projection-lifecycle.md  serff-data-model.md
docs/validation/: adr-auditrecord-operator-e2e-p12trf.md  audit-record-e2e.md
docs/vision/: product-understanding-engine.md
docs/workflows/: openclaw-platform-loop.md  product-review-onboarding.md  project-health.md  serff-to-illustration.md
examples/: p12trf_mechanics.json  p12trf_scenarios.json
examples/product-definitions/: p12trf-product-definition.json
k8s/: dagster-dev.yaml  ingestion-cronjob.yaml  postgres-secret.yaml  postgres.yaml  projection-ui-verifier.Dockerfile  projection-ui.yaml
src/actuarypoc/: __init__.py  product_registry.py  (+1 more)
web/: AIReviewAgentPage.tsx  App.tsx  CreateProductReviewPage.tsx  ProductCatalogPage.tsx  ProductDetailPage.tsx  ProductModelReviewPage.tsx  ProductWorkspacePage.tsx  RunDetailPage.tsx  WorkspacePage.tsx  index.html  package-lock.json  package.json  run-detail.types.ts  styles.css  vite.config.ts
(+62 files in other folders)
