[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actuarypoc"
version = "0.1.0"
description = "POC platform for insurance illustration pipelines"
requires-python = ">=3.9"
dependencies = [
    "dagster==1.7.14",
    "minio==7.2.7",
    "pandas==2.2.2",
    "typer==0.12.3",
    "pydantic==2.8.2",
    "pyyaml==6.0.1"
]
